[gd_scene load_steps=24 format=3 uid="uid://cbf3ak7twpqwh"]

[ext_resource type="Script" path="res://Menu/scripts/menu.gd" id="1_2mdlx"]
[ext_resource type="Texture2D" uid="uid://cm4u7a8h4vtn5" path="res://Menu/sprites/background.png" id="2_2khke"]
[ext_resource type="AudioStream" uid="uid://dfte08e0r6kfn" path="res://Audio/Menu_Music.mp3" id="2_k3o4f"]
[ext_resource type="Texture2D" uid="uid://4bcxs57h3k5q" path="res://Menu/sprites/logo_wo_bg.png" id="3_pxx7m"]
[ext_resource type="AudioStream" uid="uid://dgv7ef73jygj8" path="res://Audio/Sfx/menuBtn.mp3" id="4_47cg7"]
[ext_resource type="Texture2D" uid="uid://c1udiqaanxyr0" path="res://Menu/sprites/Menu Button.png" id="4_oq4gk"]
[ext_resource type="Script" path="res://Menu/scenes/menu_group.gd" id="5_if50g"]
[ext_resource type="FontFile" uid="uid://qwrn5esm1jyj" path="res://Fonts/VCR_OSD_MONO_1.001.ttf" id="5_pgug2"]
[ext_resource type="Texture2D" uid="uid://kqh6nsl38np1" path="res://Menu/sprites/bg_board.png" id="8_atemr"]
[ext_resource type="Texture2D" uid="uid://dmmvqh602orl0" path="res://Menu/sprites/wooden-game-buttons-banners_107791-4924-removebg-preview.png" id="9_rlr3j"]
[ext_resource type="Texture2D" uid="uid://mfid0i1fj05n" path="res://Menu/sprites/button.png" id="9_yy34o"]

[sub_resource type="LabelSettings" id="LabelSettings_lg18s"]
font = ExtResource("5_pgug2")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_wgrlu"]
font = ExtResource("5_pgug2")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_awi85"]
font = ExtResource("5_pgug2")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_3u73h"]
font = ExtResource("5_pgug2")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_2g2v7"]
font = ExtResource("5_pgug2")
font_size = 18

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cvcht"]
content_margin_left = 8.0
content_margin_right = 8.0
texture = ExtResource("9_rlr3j")
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
modulate_color = Color(0.633757, 0.633757, 0.633757, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gxkoq"]
content_margin_left = 8.0
content_margin_right = 8.0
texture = ExtResource("9_rlr3j")
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
modulate_color = Color(0.635294, 0.635294, 0.635294, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oi71f"]
content_margin_left = 8.0
content_margin_right = 8.0
texture = ExtResource("9_rlr3j")
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_auu2y"]
font = ExtResource("5_pgug2")
font_size = 200

[sub_resource type="Gradient" id="Gradient_4sjb1"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_038du"]
gradient = SubResource("Gradient_4sjb1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0j0vf"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(300, 1, 1)
gravity = Vector3(0, 20, 0)
radial_accel_min = -1.0
radial_accel_max = -1.0
damping_min = 5.0
damping_max = 5.0
scale_min = 2.0
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_038du")
collision_mode = 1
collision_friction = 1.0
collision_bounce = 0.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2mdlx")
metadata/_edit_vertical_guides_ = [640.0, 320.0]
metadata/_edit_horizontal_guides_ = [360.0]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(321.5, 181)
scale = Vector2(0.361049, 0.363281)
texture = ExtResource("2_2khke")

[node name="MenuAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_k3o4f")
volume_db = -20.0
autoplay = true
parameters/looping = true

[node name="SfxAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_47cg7")

[node name="MenuGroup" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 267.0
offset_top = 178.0
offset_right = 307.0
offset_bottom = 218.0
script = ExtResource("5_if50g")

[node name="Title" type="TextureRect" parent="MenuGroup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.225
anchor_top = 0.263889
anchor_right = 0.775
anchor_bottom = 0.552778
offset_left = -132.0
offset_top = -93.5556
offset_right = 1606.0
offset_bottom = 414.889
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_pxx7m")
metadata/_edit_use_anchors_ = true

[node name="NewBtn" type="TextureButton" parent="MenuGroup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -180.0
offset_right = -142.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_oq4gk")

[node name="NewLabel" type="Label" parent="MenuGroup/NewBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "New Game"
label_settings = SubResource("LabelSettings_lg18s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ContinueBtn" type="TextureButton" parent="MenuGroup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -180.0
offset_right = 18.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_oq4gk")

[node name="ContinueLabel" type="Label" parent="MenuGroup/ContinueBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue
"
label_settings = SubResource("LabelSettings_wgrlu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsBtn" type="TextureButton" parent="MenuGroup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -180.0
offset_right = 178.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_oq4gk")

[node name="OptionsLabel" type="Label" parent="MenuGroup/OptionsBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Options
"
label_settings = SubResource("LabelSettings_awi85")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ExitBtn" type="TextureButton" parent="MenuGroup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = -180.0
offset_right = 338.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_oq4gk")

[node name="ExitLabel" type="Label" parent="MenuGroup/ExitBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = SubResource("LabelSettings_3u73h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsGroup" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="optionsBackground" type="Sprite2D" parent="OptionsGroup"]
position = Vector2(320, 182)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_atemr")

[node name="Music" type="Control" parent="OptionsGroup"]
layout_mode = 1
anchor_left = 0.7
anchor_top = -1.175
anchor_right = 1.7
anchor_bottom = -0.175
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="OptionsGroup/Music"]
layout_mode = 0
offset_left = 134.0
offset_top = 171.0
offset_right = 187.0
offset_bottom = 194.0
text = "Music"
label_settings = SubResource("LabelSettings_2g2v7")

[node name="MusicScrollBar" type="HScrollBar" parent="OptionsGroup/Music"]
texture_filter = 2
custom_minimum_size = Vector2(250, 15)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 175.0
offset_top = 153.0
offset_right = 425.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/grabber = SubResource("StyleBoxTexture_cvcht")
theme_override_styles/grabber_highlight = SubResource("StyleBoxTexture_gxkoq")
theme_override_styles/grabber_pressed = SubResource("StyleBoxTexture_oi71f")
min_value = -80.0
max_value = 0.0
rounded = true

[node name="SFX" type="Control" parent="OptionsGroup"]
layout_mode = 1
anchor_left = 0.7
anchor_top = 1.2
anchor_right = 1.7
anchor_bottom = 2.2
offset_top = -47.0
offset_bottom = -47.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="OptionsGroup/SFX"]
layout_mode = 0
offset_left = 134.0
offset_top = 171.0
offset_right = 187.0
offset_bottom = 194.0
text = "SFX"
label_settings = SubResource("LabelSettings_2g2v7")

[node name="SfxScrollBar" type="HScrollBar" parent="OptionsGroup/SFX"]
texture_filter = 2
custom_minimum_size = Vector2(250, 15)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 175.0
offset_top = 153.0
offset_right = 425.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/grabber = SubResource("StyleBoxTexture_cvcht")
theme_override_styles/grabber_highlight = SubResource("StyleBoxTexture_gxkoq")
theme_override_styles/grabber_pressed = SubResource("StyleBoxTexture_oi71f")
min_value = -80.0
max_value = 40.0
rounded = true

[node name="CancelBtn" type="TextureButton" parent="OptionsGroup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.3
anchor_top = 5.75
anchor_right = 10.54
anchor_bottom = 6.87
offset_right = 1190.4
offset_bottom = 595.2
scale = Vector2(0.07, 0.07)
texture_normal = ExtResource("9_yy34o")
metadata/_edit_use_anchors_ = true

[node name="CancelLabel" type="Label" parent="OptionsGroup/CancelBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"
label_settings = SubResource("LabelSettings_auu2y")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DoneBtn" type="TextureButton" parent="OptionsGroup"]
layout_mode = 0
anchor_left = 5.5
anchor_top = 5.75
anchor_right = 7.74
anchor_bottom = 6.87
offset_right = 1190.4
offset_bottom = 595.2
scale = Vector2(0.07, 0.07)
texture_normal = ExtResource("9_yy34o")
metadata/_edit_use_anchors_ = true

[node name="DoneLabel" type="Label" parent="OptionsGroup/DoneBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Done"
label_settings = SubResource("LabelSettings_auu2y")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(311, -6)
amount = 64
process_material = SubResource("ParticleProcessMaterial_0j0vf")
lifetime = 20.0

[connection signal="mouse_entered" from="MenuGroup/NewBtn" to="MenuGroup" method="_on_new_btn_mouse_entered"]
[connection signal="mouse_exited" from="MenuGroup/NewBtn" to="MenuGroup" method="_on_new_btn_mouse_exited"]
[connection signal="pressed" from="MenuGroup/NewBtn" to="." method="_on_new_btn_pressed"]
[connection signal="mouse_entered" from="MenuGroup/ContinueBtn" to="MenuGroup" method="_on_continue_btn_mouse_entered"]
[connection signal="mouse_exited" from="MenuGroup/ContinueBtn" to="MenuGroup" method="_on_continue_btn_mouse_exited"]
[connection signal="mouse_entered" from="MenuGroup/OptionsBtn" to="MenuGroup" method="_on_options_btn_mouse_entered"]
[connection signal="mouse_exited" from="MenuGroup/OptionsBtn" to="MenuGroup" method="_on_options_btn_mouse_exited"]
[connection signal="pressed" from="MenuGroup/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="mouse_entered" from="MenuGroup/ExitBtn" to="MenuGroup" method="_on_exit_btn_mouse_entered"]
[connection signal="mouse_exited" from="MenuGroup/ExitBtn" to="MenuGroup" method="_on_exit_btn_mouse_exited"]
[connection signal="pressed" from="MenuGroup/ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="value_changed" from="OptionsGroup/Music/MusicScrollBar" to="." method="_on_music_scroll_bar_value_changed"]
[connection signal="value_changed" from="OptionsGroup/SFX/SfxScrollBar" to="." method="_on_sfx_scroll_bar_value_changed"]
[connection signal="mouse_entered" from="OptionsGroup/CancelBtn" to="MenuGroup" method="_on_cancel_btn_mouse_entered"]
[connection signal="mouse_exited" from="OptionsGroup/CancelBtn" to="MenuGroup" method="_on_cancel_btn_mouse_exited"]
[connection signal="pressed" from="OptionsGroup/CancelBtn" to="." method="_on_cancel_btn_pressed"]
[connection signal="mouse_entered" from="OptionsGroup/DoneBtn" to="MenuGroup" method="_on_done_btn_mouse_entered"]
[connection signal="mouse_exited" from="OptionsGroup/DoneBtn" to="MenuGroup" method="_on_done_btn_mouse_exited"]
[connection signal="pressed" from="OptionsGroup/DoneBtn" to="." method="_on_done_btn_pressed"]
